# advent_of_code

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
2019/day_1/: d1_sol2.cpp
2019/day_2/: d2_sol1.cpp  d2_sol2.cpp
2020/: pyproject.toml  utils.py
2020/day1/: star1.py  star2.py
2020/day2/: star1.py  star2.py
2020/day3/: star1.py  star2.py
2020/day4/: star1.py  star2.py
2020/day5/: star1.py  star2.py
2020/day6/: star1.py  star2.py
2020/day7/: star1.py  star2.py
2020/day8/: star1.py  star2.py
day_1/: d1_sol1.cpp
day_2/: d2_sol1.cpp
